# arucoros-realsense

./: .readme  README.md  readme
docker/: Dockerfile  docker-compose.yaml
oak-D/: Dockerfile  docker-compose.yaml
realsense-arucoros-noetic-amd64/: README.md
realsense-arucoros-noetic-amd64/docker/: Dockerfile  docker-compose.yaml
realsense-arucoros-noetic-arm64/: README.md
realsense-arucoros-noetic-arm64/docker/: Dockerfile  docker-compose.yaml
ros-pcl-segmentation/docker/: Dockerfile  compose-build.yml  compose-run.yml  docker.sh
ros-pcl-segmentation/docker/scripts/: fix-tf2.sh
ros-pcl-segmentation/extraction-ws/devel/: .catkin  setup.sh
ros-pcl-segmentation/extraction-ws/devel/lib/diff-rs-pcl2/: D-main-a  D-main-b  D-safety-ab
ros-pcl-segmentation/extraction-ws/devel/lib/pkgconfig/: diff-rs-pcl2.pc  univ-rs-pcl2.pc
ros-pcl-segmentation/extraction-ws/devel/lib/univ-rs-pcl2/: U-entrypoint  U-main-a  U-main-b  U-safety-ab
ros-pcl-segmentation/extraction-ws/devel/share/diff-rs-pcl2/cmake/: diff-rs-pcl2Config.cmake
ros-pcl-segmentation/extraction-ws/devel/share/univ-rs-pcl2/cmake/: univ-rs-pcl2Config.cmake
ros-pcl-segmentation/extraction-ws/src/diff-rs-pcl2/: CMakeLists.txt  package.xml
ros-pcl-segmentation/extraction-ws/src/diff-rs-pcl2/config/: cam-a.rviz  cam-b.rviz  marker-cam-a.rviz  marker-cam-b.rviz
ros-pcl-segmentation/extraction-ws/src/diff-rs-pcl2/include/: dbscan-cluster.h  voxelgrid-cube.h
ros-pcl-segmentation/extraction-ws/src/diff-rs-pcl2/launch/: main-a.launch  main-b.launch  rviz-a.launch  rviz-b.launch  rviz-marker-a.launch  rviz-marker-b.launch  safety-ab.launch
ros-pcl-segmentation/extraction-ws/src/diff-rs-pcl2/src/: dbscan-cluster.cpp  entrypoint.cpp  ins-ready.py  main-a.cpp  main-b.cpp  safety-ab.cpp  voxelgrid-cube.cpp
ros-pcl-segmentation/startup/: check-id.sh  sim-ready.sh
ros-pcl-segmentation/startup/diff/: diff-inspection.sh  diff-prepare.sh
ros-pcl-segmentation/startup/diff/task/: diff-cam-a-rviz.sh  diff-cam-a.sh  diff-cam-b-rviz.sh  diff-cam-b.sh  diff-ladybug-a.sh  diff-ladybug-b.sh  diff-safety-ab.sh
